[gd_scene load_steps=18 format=3 uid="uid://bji3j7jm2votc"]

[ext_resource type="Theme" uid="uid://deptsttubjnfv" path="res://src/Editor/EditorTheme.tres" id="1"]
[ext_resource type="StyleBox" uid="uid://c53b3p1k47jdu" path="res://src/UI/StyleBox/SteelRound.tres" id="2"]
[ext_resource type="Script" uid="uid://dhuooyagsaocp" path="res://src/Editor/Button/PropertyButton.gd" id="3"]
[ext_resource type="StyleBox" uid="uid://dyck1dw7csaip" path="res://src/UI/StyleBox/RustRoundInset.tres" id="4"]
[ext_resource type="FontFile" uid="uid://blfj3547rxpe8" path="res://assets/UI/Font/momo.ttf" id="4_sdg3t"]
[ext_resource type="Script" uid="uid://q2r8s3f687q7" path="res://src/Editor/LineEditOverride.gd" id="6_yjys0"]

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxEmpty" id="4"]

[sub_resource type="StyleBoxEmpty" id="1"]

[sub_resource type="StyleBoxEmpty" id="2"]

[sub_resource type="StyleBoxEmpty" id="5"]

[sub_resource type="StyleBoxEmpty" id="8"]

[sub_resource type="StyleBoxEmpty" id="9"]

[sub_resource type="StyleBoxEmpty" id="10"]

[sub_resource type="StyleBoxEmpty" id="6"]

[sub_resource type="StyleBoxEmpty" id="7"]

[sub_resource type="StyleBoxEmpty" id="11"]

[node name="PropertyButton" type="MarginContainer" groups=["PropertyButtons"]]
clip_contents = true
offset_right = 248.0
offset_bottom = 32.0
theme = ExtResource("1")
script = ExtResource("3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="PanelActive" type="Panel" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Spacer" type="Control" parent="HBox"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
mouse_filter = 2

[node name="Button" type="Button" parent="HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_sdg3t")
theme_override_styles/focus = SubResource("3")
theme_override_styles/disabled = SubResource("4")
theme_override_styles/hover = SubResource("1")
theme_override_styles/pressed = SubResource("2")
theme_override_styles/normal = SubResource("5")
text = "Property"
flat = true

[node name="HBox" type="HBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Bool" type="CheckBox" parent="HBox/HBox"]
visible = false
layout_mode = 2
mouse_filter = 1
theme_override_styles/focus = SubResource("8")
theme_override_styles/disabled = SubResource("9")
theme_override_styles/hover_pressed = SubResource("10")
theme_override_styles/hover = SubResource("6")
theme_override_styles/pressed = SubResource("7")
theme_override_styles/normal = SubResource("11")

[node name="Panel" type="Panel" parent="HBox/HBox/Bool"]
show_behind_parent = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 0
offset_left = -2.0
offset_right = 30.0
offset_bottom = 32.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("4")

[node name="Color" type="ColorPickerButton" parent="HBox/HBox"]
visible = false
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/focus = ExtResource("4")
theme_override_styles/disabled = ExtResource("4")
theme_override_styles/hover = ExtResource("4")
theme_override_styles/pressed = ExtResource("4")
theme_override_styles/normal = ExtResource("4")

[node name="Enum" type="OptionButton" parent="HBox/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 1
theme_override_fonts/font = ExtResource("4_sdg3t")
theme_override_styles/focus = ExtResource("4")
theme_override_styles/disabled = ExtResource("4")
theme_override_styles/hover = ExtResource("4")
theme_override_styles/pressed = ExtResource("4")
theme_override_styles/normal = ExtResource("4")

[node name="String" type="LineEdit" parent="HBox/HBox"]
visible = false
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_fonts/font = ExtResource("4_sdg3t")
text = "fffttttt"
placeholder_text = "Null"
alignment = 2
deselect_on_focus_loss_enabled = false
script = ExtResource("6_yjys0")

[node name="Int" type="LineEdit" parent="HBox/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 1
theme_override_fonts/font = ExtResource("4_sdg3t")
placeholder_text = "Null"
alignment = 2
deselect_on_focus_loss_enabled = false
script = ExtResource("6_yjys0")

[node name="Float" type="LineEdit" parent="HBox/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 1
theme_override_fonts/font = ExtResource("4_sdg3t")
placeholder_text = "Null"
alignment = 2
deselect_on_focus_loss_enabled = false
script = ExtResource("6_yjys0")

[node name="Load" type="LineEdit" parent="HBox/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_fonts/font = ExtResource("4_sdg3t")
placeholder_text = "Null"
alignment = 2
editable = false
script = ExtResource("6_yjys0")

[node name="Vector2X" type="LineEdit" parent="HBox/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
theme_override_fonts/font = ExtResource("4_sdg3t")
placeholder_text = "Null"
alignment = 2
script = ExtResource("6_yjys0")

[node name="Vector2Y" type="LineEdit" parent="HBox/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
theme_override_fonts/font = ExtResource("4_sdg3t")
alignment = 2
script = ExtResource("6_yjys0")

[node name="Spacer2" type="Control" parent="HBox"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
mouse_filter = 2

[connection signal="pressed" from="HBox/Button" to="." method="on_pressed"]
[connection signal="toggled" from="HBox/HBox/Bool" to="." method="on_bool_toggled"]
[connection signal="popup_closed" from="HBox/HBox/Color" to="." method="on_color_changed"]
[connection signal="item_selected" from="HBox/HBox/Enum" to="." method="on_enum_selected"]
[connection signal="focus_exited" from="HBox/HBox/String" to="." method="_on_string_complete"]
[connection signal="text_submitted" from="HBox/HBox/String" to="." method="_on_string_complete"]
[connection signal="focus_exited" from="HBox/HBox/Int" to="." method="_on_int_complete"]
[connection signal="text_submitted" from="HBox/HBox/Int" to="." method="_on_int_complete"]
[connection signal="focus_exited" from="HBox/HBox/Float" to="." method="_on_float_complete"]
[connection signal="text_submitted" from="HBox/HBox/Float" to="." method="_on_float_complete"]
[connection signal="focus_exited" from="HBox/HBox/Load" to="." method="_on_string_complete"]
[connection signal="text_submitted" from="HBox/HBox/Load" to="." method="_on_string_complete"]
[connection signal="focus_exited" from="HBox/HBox/Vector2X" to="." method="_on_vector2x_complete"]
[connection signal="text_submitted" from="HBox/HBox/Vector2X" to="." method="_on_vector2x_complete"]
[connection signal="focus_exited" from="HBox/HBox/Vector2Y" to="." method="_on_vector2y_complete"]
[connection signal="text_submitted" from="HBox/HBox/Vector2Y" to="." method="_on_vector2y_complete"]
